# pg-embedded-setup-unpriv

./: .markdownlint-cli2.jsonc  Cargo.toml  Dockerfile  Makefile  README.md  debugging-plan-20260119-195943.md  drop_order
.config/: nextest.toml
.github/workflows/: ci.yml  dependabot-automerge.yml  release.yml  selftest.yml
.grepai/: config.yaml  symbols.gob
docs/: adr-001-pglite-oxide-backend.md  adr-002-template-database-support.md  adr-003-mutex-enhancement-proposal.md  cache.md  developers-guide.md  documentation-style-guide.md  local-validation-of-github-actions-with-act-and-pytest.md  next-steps.md  ortho-config-users-guide.md  roadmap.md  rstest-bdd-users-guide.md  rust-doctest-dry-guide.md  rust-testing-with-rstest-fixtures.md  testing-playbook-root.md  users-guide.md  v0-5-0-migration-guide.md  zero-config-raii-postgres-test-fixture-design.md
docs/examples/: rstest-fixture-example.md
docs/execplans/: 3-2-1-add-loom-based-concurrency-tests.md  3-3-1-confirm-linux-root-and-unprivileged-paths-through-ci.md  cluster-unit-tests-gates.md  configure-pg-worker-count.md  data-directory-recovery-logic.md  database-templates.md  issue-20-leverage-serde-features-and-secrecy-crate-in-worker-rs.md  issue-50-async-support.md  issue-59-make-pg-worker-a-first-class-binary.md  issue-60-3-environment-mutation-abstraction.md  issue-60-5-lifecycle-behavior-helpers.md  issue-66-raii-fixture-cleanup.md  issue-84-send-safe-cluster-handle.md
src/: bootstrap.rs  cleanup_helpers.rs  cluster.rs  env.rs  error.rs  fs.rs  lib.rs  main.rs  observability.rs  privileges.rs  test_support.rs  worker.rs  worker_process.rs
src/bootstrap/: env.rs  env_tests.rs  env_types.rs  mod.rs  mod_tests.rs  mode.rs  prepare.rs  worker_discovery.rs
src/bootstrap/prepare/: mod.rs  tests.rs
src/cache/: config.rs  lock.rs  mod.rs  operations.rs
src/cache/operations/: copy.rs  lookup.rs  mod.rs  populate.rs  tests.rs
src/cluster/: accessors.rs  async_api.rs  cache_integration.rs  cleanup.rs  connection.rs  delegation.rs  drop_handling.rs  drop_logging_tests.rs  drop_support.rs  guard.rs  handle.rs  installation.rs  lifecycle.rs  mod.rs  mod_tests.rs  panic_utils.rs  port_refresh.rs  runtime.rs  runtime_mode.rs  shutdown.rs  shutdown_hook.rs  startup.rs  startup_tests.rs  sync_api.rs  temporary_database.rs  tests.rs  worker_invoker.rs  worker_operation.rs
src/cluster/worker_invoker/: mod.rs  tests.rs
src/env/: loom_tests.rs  mod.rs  state.rs  summary.rs  tests.rs
src/env/tests/: corruption.rs  mod.rs  thread_helpers.rs
src/test_support/: errors.rs  filesystem.rs  fixtures.rs  fixtures_docs.rs  fs.rs  hash.rs  hook.rs  logging.rs  mod.rs  panic.rs  partial_data_dir.rs  scoped_env.rs  shared_singleton.rs  skip.rs  worker_env.rs  worker_env_tests.rs
src/worker_process/: mod.rs  output.rs  privileges.rs
tests/: bootstrap_for_tests.rs  bootstrap_privileges.rs  bootstrap_worker_binary.rs  cluster_handle_send.rs  cluster_split_constructors.rs  data_dir_recovery.rs  database_lifecycle.rs  e2e_postgresql_embedded_diesel.rs  localized_diagnostics.rs  observability.rs  recovery_integration.rs  settings.rs  settings_logging.rs  settings_snapshot_roundtrip.rs  shared_cluster_handle_failure.rs  shared_cluster_handle_success.rs  shutdown_hook.rs  shutdown_hook_lifecycle.rs  shutdown_timeout.rs  test_cluster.rs  test_cluster_async.rs  test_cluster_behaviour.rs  test_cluster_connection.rs  test_cluster_drop.rs  test_cluster_fixture.rs  test_observability.rs  test_workflow_integration.py  worker_process.rs
tests/features/: bootstrap_for_tests.feature  bootstrap_privileges.feature  database_lifecycle.feature  localized_diagnostics.feature  observability.feature  settings_logging.feature  test_cluster.feature  test_cluster_connection.feature  test_cluster_fixture.feature
tests/fixtures/: pull_request.event.json
tests/support/: bootstrap_sandbox.rs  cap_fs.rs  cap_fs_bootstrap.rs  cap_fs_privileged.rs  cap_fs_settings.rs  cluster_skip.rs  cluster_test_utils.rs  database_lifecycle_helpers.rs  diesel_e2e_helpers.rs  env.rs  env_isolation.rs  env_snapshot.rs  mod.rs  partial_data_dir.rs  pg_worker.rs  pg_worker_hang.rs  pg_worker_helpers.rs  pg_worker_tests.rs  sandbox.rs  scenario.rs  serial.rs  skip.rs
tests/support/database_lifecycle_helpers/: tests.rs
tests/support/fixtures/: pg_ctl_stub.sh
tests/test_cluster_fixture/: mod.rs  process_utils.rs  steps.rs  unit_tests.rs  world.rs
