[package]
name = "pg-embed-setup-unpriv"
version = "0.1.0"
edition = "2024"

[lib]
name = "pg_embedded_setup_unpriv"
path = "src/lib.rs"

[[bin]]
name = "pg_embedded_setup_unpriv"
path = "src/main.rs"

[[bin]]
name = "pg_worker"
path = "tests/support/pg_worker.rs"
required-features = ["dev-worker"]

[[test]]
name = "test_cluster"
path = "tests/test_cluster.rs"
required-features = ["cluster-unit-tests"]

[dependencies]
postgresql_embedded = { version = "0.20.0", features = ["tokio"] }
nix = { version = "0.28", default-features = false, features = ["user", "fs"] }
color-eyre = "0.6"
tokio = { version = "1", features = ["rt", "macros"] }
serde = { version = "1", features = ["derive"] }
ortho_config = { version = "0.5.0", features = ["json5", "yaml", "toml"] }
clap = { version = "4", features = ["derive"] }
figment = { version = "0.10", features = ["env"] }
xdg = "3"
uncased = "0.9"
figment-json5 = "0.1.1"
cap-std = "3.4.4"
camino = { version = "1.2", features = ["serde1"] }
thiserror = "1"
serde_json = "1"
tempfile = "3"

[features]
toml = []
json5 = []
yaml = []
privileged-tests = []
cluster-unit-tests = []
dev-worker = []

[lints.rust]
missing_docs = "deny"
missing_crate_level_docs = "deny"

[dev-dependencies]
rstest = "0.18"
temp-env = "0.3"
color-eyre = "0.6"
diesel = { version = "2", default-features = false, features = ["postgres"] }
rstest-bdd = "0.1.0-alpha4"
rstest-bdd-macros = "0.1.0-alpha4"
once_cell = "1"
